--- a/stylehome.css
+++ b/stylehome.css
@@ -1,11 +1,6 @@
-
 * {
-
-    font-family: 'Merriweather', serif;
-    font-family: 'Raleway', sans-serif;
-
-
-    
+  font-family: "Merriweather", serif;
+  font-family: "Raleway", sans-serif;
 }
 .logo {
   height: 300px;
@@ -14,17 +9,24 @@
   align-items: center;
   justify-content: center;
   margin-top: 10px;
-  
 }
 
 .logo img {
   max-height: 100%;
 }
 
+body {
+  margin: 0px 20px 50px 20px !important;
+}
+
+#navbarTogglerDemo03 {
+  margin: 10px !important;
+}
+
 /* Button Styles :) */
 button {
   color: rgb(0, 0, 0);
-  background-color: rgb(255,255,255);
+  background-color: rgb(255, 255, 255);
   font-size: large !important;
 }
 
@@ -42,7 +44,7 @@ button {
 }
 
 .nav-but {
-  border: solid rgb(248,249,250) 1.5px !important;
+  border: solid rgb(248, 249, 250) 1.5px !important;
 }
 
 .btn.btn-info {
@@ -75,41 +77,43 @@ button {
   width: 100%;
 }
 
-
 #button1 {
-  background-color: rgb(249,237,233);
-  border-color: rgb(207,212,217);
+  background-color: rgb(249, 237, 233);
+  border-color: rgb(207, 212, 217);
   color: black;
 }
 
 #list {
-    z-index: 999;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2px 900px 2px 2px;
-    transition: 0.3s ease;
+  z-index: 999;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.3s ease;
+  margin-left: 6px;
+}
 
+h3 {
+  margin-top: 20px;
+  text-align: center;
 }
 
 .nav-link {
   font-size: 1.2rem;
   color: black;
   transition: transform 0.3s ease;
-  }
+}
 
-  .nav-link:hover {
-    transform: scale(1.1);
-    color: rgb(63, 133, 156);
-  }
+.nav-link:hover {
+  transform: scale(1.1);
+  color: rgb(63, 133, 156);
+}
 
-.d-block  {
-width: auto;
+.d-block {
+  width: auto;
   max-width: 40%;
   margin: auto;
   display: block;
-    
 }
 
 .d-block3 {
@@ -118,7 +122,6 @@ width: auto;
   padding-top: 45px;
   margin: auto;
   display: block;
-
 }
 
 p {
@@ -127,15 +130,7 @@ p {
   background-color: white;
 }
 
-h1 {
-  padding-top: 30px;
-
-  margin: auto;
-  text-align: center;
-}
-
 #buttonShop {
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -143,9 +138,6 @@ h1 {
   background-color: rgb(249, 237, 233);
   border-color: rgb(207, 212, 217);
   color: black;
-  
-
-    
 }
 
 .popup {
@@ -154,7 +146,7 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   display: none;
-  background-color: rgb(247,237,234);
+  background-color: rgb(247, 237, 234);
   color: #000000;
   padding: 30px;
   border-radius: 10px;
@@ -203,7 +195,7 @@ h1 {
 }
 
 .imgBx {
-  max-width:50%;
+  max-width: 50%;
 }
 
 .contentBox {
@@ -214,7 +206,7 @@ h1 {
 
 ul.news {
   list-style-position: outside;
-  text-align:justify;
+  text-align: justify;
   padding: 0;
 }
 
@@ -252,7 +244,7 @@ ul.news li {
 }
 
 #newsletterForm button {
-  background-color: rgb(63,133,156);
+  background-color: rgb(63, 133, 156);
   color: #ffffff;
   border: none;
   padding: 10px 20px;
@@ -275,5 +267,116 @@ ul.news li {
 #navbarTogglerDemo03 #trolley,
 #navbarTogglerDemo03 #account {
   font-size: 1.5em;
+}
 
+/* //// Catalogue Page ////// */
+
+.catalogue_title {
+  margin: 30px 30px;
+  text-align: left;
+}
+
+#body-catalogue {
+  margin-bottom: 200px !important;
+}
+
+#catalogue_cont {
+  display: flex;
+  container: wrap;
+}
+
+.accordion {
+  width: 23%;
+  margin: 0 10px;
+  min-width: 23%;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  margin: 10px 0;
+}
+
+.description_boxes {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#cream_image {
+  height: 200px;
+  margin-right: 20px;
+}
+
+#cream_image img {
+  max-height: 100%;
+}
+
+#cream1_data {
+  padding-right: 10px;
+}
+
+.card.card-body {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+}
+
+/* /////// Cart Page //////// */
+
+#my_cart {
+  margin: 0px 40px 20px 40px !important;
+  padding: 30px;
+  border: solid 2px;
+  border-color: black;
+  border-radius: 5px;
+}
+
+#cart_noitems {
+  font-size: 15px !important;
+}
+
+#cart_id {
+  margin: 20px 20px 0 20px;
+}
+
+#trolley {
+  padding-right: 5px !important;
+}
+
+.suggestions {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+h4 {
+  font-size: 15px !important;
+}
+
+.link {
+  text-decoration: underline;
+  color: green;
+  font-style: italic;
+  margin-top: 20px;
+}
+
+.navbar {
+  align-items: normal !important;
+  padding: 5px;
+}
+
+/* Responsiveness */
+
+@media screen and (max-width: 600px) {
+  body {
+    font-size: 60px !important;
+  }
+  head {
+    font-size: 60px !important;
+  }
+  #list {
+    padding: 2px 2px 2px 2px !important;
+  }
 }
